# bipa-backend-challenge

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml
postgresdb/: Dockerfile
postgresdb/config/: pg_hba.conf  postgresql.conf
postgresdb/initscripts/: 01_create_nodes.sql
src/: data_fetch.rs  db.rs  main.rs  nodes.rs  query_builder.rs
