[package]
name = "bipa-backend-challenge"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }
